qt/multimedia/gen_qmediaplayer.h

class QAbstractVideoSurface;
class QGraphicsVideoItem;
class QIODevice;
class QMediaContent;
class QMediaPlayer;
class QMediaPlaylist;
class QMetaObject;
class QNetworkConfiguration;
class QObject;
class QVideoWidget;
typedef struct QAbstractVideoSurface QAbstractVideoSurface;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QGraphicsVideoItem QGraphicsVideoItem;
typedef struct QIODevice QIODevice;
typedef struct QMediaContent QMediaContent;
typedef struct QMediaPlayer QMediaPlayer;
typedef struct QMediaPlaylist QMediaPlaylist;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QNetworkConfiguration QNetworkConfiguration;
typedef struct QObject QObject;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVideoWidget QVideoWidget;
bool QMediaPlayer_override_virtual_service(void* self, intptr_t slot);
bool QMediaPlayer_override_virtual_event(void* self, intptr_t slot);
bool QMediaPlayer_virtualbase_event(void* self, QEvent* event);
bool QMediaPlayer_override_virtual_eventFilter(void* self, intptr_t slot);
bool QMediaPlayer_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QMediaPlayer_override_virtual_timerEvent(void* self, intptr_t slot);
void QMediaPlayer_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QMediaPlayer_override_virtual_childEvent(void* self, intptr_t slot);
void QMediaPlayer_virtualbase_childEvent(void* self, QChildEvent* event);
bool QMediaPlayer_override_virtual_customEvent(void* self, intptr_t slot);
void QMediaPlayer_virtualbase_customEvent(void* self, QEvent* event);
bool QMediaPlayer_override_virtual_connectNotify(void* self, intptr_t slot);
void QMediaPlayer_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QMediaPlayer_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QMediaPlayer_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QMediaPlayer_staticMetaObject();
void QMediaPlayer_delete(QMediaPlayer* self);