qt/multimedia/gen_qmediaplayer.nim

proc fcQMediaPlayer_override_virtual_service(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_service".}
proc fQMediaPlayer_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QMediaPlayer_virtualbase_event".}
proc fcQMediaPlayer_override_virtual_event(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_event".}
proc fQMediaPlayer_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QMediaPlayer_virtualbase_eventFilter".}
proc fcQMediaPlayer_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_eventFilter".}
proc fQMediaPlayer_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QMediaPlayer_virtualbase_timerEvent".}
proc fcQMediaPlayer_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_timerEvent".}
proc fQMediaPlayer_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QMediaPlayer_virtualbase_childEvent".}
proc fcQMediaPlayer_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_childEvent".}
proc fQMediaPlayer_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QMediaPlayer_virtualbase_customEvent".}
proc fcQMediaPlayer_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_customEvent".}
proc fQMediaPlayer_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QMediaPlayer_virtualbase_connectNotify".}
proc fcQMediaPlayer_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_connectNotify".}
proc fQMediaPlayer_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QMediaPlayer_virtualbase_disconnectNotify".}
proc fcQMediaPlayer_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_disconnectNotify".}
proc fcQMediaPlayer_staticMetaObject(): pointer {.importc: "QMediaPlayer_staticMetaObject".}
proc fcQMediaPlayer_delete(self: pointer) {.importc: "QMediaPlayer_delete".}


func init*(T: type QMediaPlayer, h: ptr cQMediaPlayer): QMediaPlayer =
  T(h: h)
proc create*(T: type QMediaPlayer, ): QMediaPlayer =

  QMediaPlayer.init(fcQMediaPlayer_new())
proc create*(T: type QMediaPlayer, parent: gen_qobject.QObject): QMediaPlayer =

  QMediaPlayer.init(fcQMediaPlayer_new2(parent.h))
proc create*(T: type QMediaPlayer, parent: gen_qobject.QObject, flags: QMediaPlayerFlag): QMediaPlayer =

  QMediaPlayer.init(fcQMediaPlayer_new3(parent.h, cint(flags)))
proc metaObject*(self: QMediaPlayer, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQMediaPlayer_metaObject(self.h))

proc metacast*(self: QMediaPlayer, param1: cstring): pointer =

  fcQMediaPlayer_metacast(self.h, param1)

proc metacall*(self: QMediaPlayer, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQMediaPlayer_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QMediaPlayer, s: cstring): string =

  let v_ms = fcQMediaPlayer_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QMediaPlayer, s: cstring): string =

  let v_ms = fcQMediaPlayer_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc hasSupport*(_: type QMediaPlayer, mimeType: string): gen_qmultimedia.QMultimediaSupportEstimate =

  gen_qmultimedia.QMultimediaSupportEstimate(fcQMediaPlayer_hasSupport(struct_miqt_string(data: mimeType, len: csize_t(len(mimeType)))))

proc supportedMimeTypes*(_: type QMediaPlayer, ): seq[string] =

  var v_ma = fcQMediaPlayer_supportedMimeTypes()
  var vx_ret = newSeq[string](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[struct_miqt_string]](v_ma.data)
  for i in 0 ..< v_ma.len:
    let vx_lv_ms = v_outCast[i]
    let vx_lvx_ret = string.fromBytes(toOpenArrayByte(vx_lv_ms.data, 0, int(vx_lv_ms.len)-1))
    c_free(vx_lv_ms.data)
    vx_ret[i] = vx_lvx_ret
  vx_ret

proc setVideoOutput*(self: QMediaPlayer, videoOutput: gen_qvideowidget.QVideoWidget): void =

  fcQMediaPlayer_setVideoOutput(self.h, videoOutput.h)

proc setVideoOutputWithVideoOutput*(self: QMediaPlayer, videoOutput: gen_qgraphicsvideoitem.QGraphicsVideoItem): void =

  fcQMediaPlayer_setVideoOutputWithVideoOutput(self.h, videoOutput.h)

proc setVideoOutputWithSurface*(self: QMediaPlayer, surface: gen_qabstractvideosurface.QAbstractVideoSurface): void =

  fcQMediaPlayer_setVideoOutputWithSurface(self.h, surface.h)

proc setVideoOutputWithSurfaces*(self: QMediaPlayer, surfaces: seq[gen_qabstractvideosurface.QAbstractVideoSurface]): void =

  var surfaces_CArray = newSeq[pointer](len(surfaces))
  for i in 0..<len(surfaces):
    surfaces_CArray[i] = surfaces[i].h

  fcQMediaPlayer_setVideoOutputWithSurfaces(self.h, struct_miqt_array(len: csize_t(len(surfaces)), data: if len(surfaces) == 0: nil else: addr(surfaces_CArray[0])))

proc media*(self: QMediaPlayer, ): gen_qmediacontent.QMediaContent =

  gen_qmediacontent.QMediaContent(h: fcQMediaPlayer_media(self.h))

proc mediaStream*(self: QMediaPlayer, ): gen_qiodevice.QIODevice =

  gen_qiodevice.QIODevice(h: fcQMediaPlayer_mediaStream(self.h))

proc playlist*(self: QMediaPlayer, ): gen_qmediaplaylist.QMediaPlaylist =

  gen_qmediaplaylist.QMediaPlaylist(h: fcQMediaPlayer_playlist(self.h))

proc currentMedia*(self: QMediaPlayer, ): gen_qmediacontent.QMediaContent =

  gen_qmediacontent.QMediaContent(h: fcQMediaPlayer_currentMedia(self.h))

proc state*(self: QMediaPlayer, ): QMediaPlayerState =

  QMediaPlayerState(fcQMediaPlayer_state(self.h))

proc mediaStatus*(self: QMediaPlayer, ): QMediaPlayerMediaStatus =

  QMediaPlayerMediaStatus(fcQMediaPlayer_mediaStatus(self.h))

proc duration*(self: QMediaPlayer, ): clonglong =

  fcQMediaPlayer_duration(self.h)

proc position*(self: QMediaPlayer, ): clonglong =

  fcQMediaPlayer_position(self.h)

proc volume*(self: QMediaPlayer, ): cint =

  fcQMediaPlayer_volume(self.h)

proc isMuted*(self: QMediaPlayer, ): bool =

  fcQMediaPlayer_isMuted(self.h)

proc isAudioAvailable*(self: QMediaPlayer, ): bool =

  fcQMediaPlayer_isAudioAvailable(self.h)

proc isVideoAvailable*(self: QMediaPlayer, ): bool =

  fcQMediaPlayer_isVideoAvailable(self.h)

proc bufferStatus*(self: QMediaPlayer, ): cint =

  fcQMediaPlayer_bufferStatus(self.h)

proc isSeekable*(self: QMediaPlayer, ): bool =

  fcQMediaPlayer_isSeekable(self.h)

proc playbackRate*(self: QMediaPlayer, ): float64 =

  fcQMediaPlayer_playbackRate(self.h)

proc error*(self: QMediaPlayer, ): QMediaPlayerError =

  QMediaPlayerError(fcQMediaPlayer_error(self.h))

proc errorString*(self: QMediaPlayer, ): string =

  let v_ms = fcQMediaPlayer_errorString(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc currentNetworkConfiguration*(self: QMediaPlayer, ): gen_qnetworkconfiguration.QNetworkConfiguration =

  gen_qnetworkconfiguration.QNetworkConfiguration(h: fcQMediaPlayer_currentNetworkConfiguration(self.h))

proc availability*(self: QMediaPlayer, ): gen_qmultimedia.QMultimediaAvailabilityStatus =

  gen_qmultimedia.QMultimediaAvailabilityStatus(fcQMediaPlayer_availability(self.h))

proc audioRole*(self: QMediaPlayer, ): gen_qaudio.QAudioRole =

  gen_qaudio.QAudioRole(fcQMediaPlayer_audioRole(self.h))

proc setAudioRole*(self: QMediaPlayer, audioRole: gen_qaudio.QAudioRole): void =

  fcQMediaPlayer_setAudioRole(self.h, cint(audioRole))

proc supportedAudioRoles*(self: QMediaPlayer, ): seq[gen_qaudio.QAudioRole] =

  var v_ma = fcQMediaPlayer_supportedAudioRoles(self.h)
  var vx_ret = newSeq[gen_qaudio.QAudioRole](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[cint]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = gen_qaudio.QAudioRole(v_outCast[i])
  vx_ret

proc customAudioRole*(self: QMediaPlayer, ): string =

  let v_ms = fcQMediaPlayer_customAudioRole(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setCustomAudioRole*(self: QMediaPlayer, audioRole: string): void =

  fcQMediaPlayer_setCustomAudioRole(self.h, struct_miqt_string(data: audioRole, len: csize_t(len(audioRole))))

proc supportedCustomAudioRoles*(self: QMediaPlayer, ): seq[string] =

  var v_ma = fcQMediaPlayer_supportedCustomAudioRoles(self.h)
  var vx_ret = newSeq[string](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[struct_miqt_string]](v_ma.data)
  for i in 0 ..< v_ma.len:
    let vx_lv_ms = v_outCast[i]
    let vx_lvx_ret = string.fromBytes(toOpenArrayByte(vx_lv_ms.data, 0, int(vx_lv_ms.len)-1))
    c_free(vx_lv_ms.data)
    vx_ret[i] = vx_lvx_ret
  vx_ret

proc play*(self: QMediaPlayer, ): void =

  fcQMediaPlayer_play(self.h)

proc pause*(self: QMediaPlayer, ): void =

  fcQMediaPlayer_pause(self.h)

proc stop*(self: QMediaPlayer, ): void =

  fcQMediaPlayer_stop(self.h)

proc setPosition*(self: QMediaPlayer, position: clonglong): void =

  fcQMediaPlayer_setPosition(self.h, position)

proc setVolume*(self: QMediaPlayer, volume: cint): void =

  fcQMediaPlayer_setVolume(self.h, volume)

proc setMuted*(self: QMediaPlayer, muted: bool): void =

  fcQMediaPlayer_setMuted(self.h, muted)

proc setPlaybackRate*(self: QMediaPlayer, rate: float64): void =

  fcQMediaPlayer_setPlaybackRate(self.h, rate)

proc setMedia*(self: QMediaPlayer, media: gen_qmediacontent.QMediaContent): void =

  fcQMediaPlayer_setMedia(self.h, media.h)

proc setPlaylist*(self: QMediaPlayer, playlist: gen_qmediaplaylist.QMediaPlaylist): void =

  fcQMediaPlayer_setPlaylist(self.h, playlist.h)

proc setNetworkConfigurations*(self: QMediaPlayer, configurations: seq[gen_qnetworkconfiguration.QNetworkConfiguration]): void =

  var configurations_CArray = newSeq[pointer](len(configurations))
  for i in 0..<len(configurations):
    configurations_CArray[i] = configurations[i].h

  fcQMediaPlayer_setNetworkConfigurations(self.h, struct_miqt_array(len: csize_t(len(configurations)), data: if len(configurations) == 0: nil else: addr(configurations_CArray[0])))

proc mediaChanged*(self: QMediaPlayer, media: gen_qmediacontent.QMediaContent): void =

  fcQMediaPlayer_mediaChanged(self.h, media.h)

proc miqt_exec_callback_QMediaPlayer_mediaChanged(slot: int, media: pointer) {.exportc.} =
  type Cb = proc(media: gen_qmediacontent.QMediaContent)
  let nimfunc = cast[ptr Cb](cast[pointer](slot))
  let slotval1 = gen_qmediacontent.QMediaContent(h: media)


  nimfunc[](slotval1)

proc onmediaChanged*(self: QMediaPlayer, slot: proc(media: gen_qmediacontent.QMediaContent)) =
  type Cb = proc(media: gen_qmediacontent.QMediaContent)
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQMediaPlayer_connect_mediaChanged(self.h, cast[int](addr tmp[]))
proc currentMediaChanged*(self: QMediaPlayer, media: gen_qmediacontent.QMediaContent): void =

  fcQMediaPlayer_currentMediaChanged(self.h, media.h)

proc miqt_exec_callback_QMediaPlayer_currentMediaChanged(slot: int, media: pointer) {.exportc.} =
  type Cb = proc(media: gen_qmediacontent.QMediaContent)
  let nimfunc = cast[ptr Cb](cast[pointer](slot))
  let slotval1 = gen_qmediacontent.QMediaContent(h: media)


  nimfunc[](slotval1)

proc oncurrentMediaChanged*(self: QMediaPlayer, slot: proc(media: gen_qmediacontent.QMediaContent)) =
  type Cb = proc(media: gen_qmediacontent.QMediaContent)
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQMediaPlayer_connect_currentMediaChanged(self.h, cast[int](addr tmp[]))
proc stateChanged*(self: QMediaPlayer, newState: QMediaPlayerState): void =

  fcQMediaPlayer_stateChanged(self.h, cint(newState))
